updated routing for translated pages

--- a/domovská-stránka.html
+++ b/domovská-stránka.html
@@ -53,18 +53,18 @@
       <nav class="navbar">
         <ul class="nav-logotype">
           <div>
-            <a href="index.html"><img alt="logo" class="nav-logo" src="img/logo.svg" /></a>
+            <a href="domovská-stránka.html"><img alt="logo" class="nav-logo" src="img/logo.svg" /></a>
           </div>
           <div class="vl"></div>
-          <li class="nav-item"><a class="nav-link" href="index.html">Kvetinové štúdio</a></li>
+          <li class="nav-item"><a class="nav-link" href="domovská-stránka.html">Kvetinové štúdio</a></li>
         </ul>
         <ul class="nav-menu">
-          <li class="nav-item-desk"><a class="nav-link" href="style-your-wedding.html">Svadobné plány</a></li>
+          <li class="nav-item-desk"><a class="nav-link" href="štýl-vašej-svadby.html">Svadobné plány</a></li>
           <div class="vl hiddenVl"></div>
           <li class="nav-item-desk"><a class="nav-link" href="404.html">Bouquetes</a></li>
           <li class="nav-mobile"><a class="nav-link" href="404.html">Bouquetes</a></li>
-          <a href="domovská-stránka.html" >English</a>
-          <a href="homepage.html">Slovak</a=>
+          <a href="homepage.html">English</a>
+          <a href="domovská-stránka.html">Slovak</a>
         </ul>
       </nav>
       <hr color="black" height="10px" size="2" />
@@ -99,7 +99,7 @@
             Na našej webovej stránke nájdete pripravené balíky dekorácií spolu s možnosťou prispôsobiť si vlastnú
             predvoľbu dekorácie
           </p>
-          <a href="style-your-wedding.html"> <button class="btn1-light">Pozrite si naše produkty</button> </a>
+          <a href="štýl-vašej-svadby.html"> <button class="btn1-light">Pozrite si naše produkty</button> </a>
         </div>
       </div>
     </section>
@@ -296,7 +296,7 @@
     </section>
     <!-- featured END--><!-- presentation of products-->
     <section class="styleYourWedding">
-      <a href="style-your-wedding.html"> <button class="btn1-light">Vytvorte si vlastný svadobný štýl</button> </a>
+      <a href="štýl-vašej-svadby.html"> <button class="btn1-light">Vytvorte si vlastný svadobný štýl</button> </a>
     </section>
     <!-- END presentation of products--><!-- Style your wedding button-->
     <section class="content-card">
@@ -461,7 +461,7 @@
               id="instagram-brands_1_"
               transform="translate(0.075 -31.825)"
             ></path></svg
-        ></a>
+        </a>
       </div>
     </footer>
     <!--Footer mobile-->
