--- a/dostupnosť-kvetov.html
+++ b/dostupnosť-kvetov.html
@@ -44,10 +44,10 @@
       <nav class="navbar">
         <ul class="nav-logotype">
           <div>
-            <a href="index.html"><img alt="logo" class="nav-logo" src="img/logo.svg" /></a>
+            <a href="domovská-stránka.html"><img alt="logo" class="nav-logo" src="img/logo.svg" /></a>
           </div>
           <div class="vl"></div>
-          <li class="nav-item"><a class="nav-link" href="index.html">Kvetinové štúdio</a></li>
+          <li class="nav-item"><a class="nav-link" href="domovská-stránka.html">Kvetinové štúdio</a></li>
         </ul>
         <ul class="nav-menu">
           <li class="nav-item-desk"><a class="nav-link" href="">Svadobné plány</a></li>
@@ -150,12 +150,12 @@
     </section>
     <!-- season wheel --><!-- MObile Version start/ carousel -->
     <section class="seasons-btns-mobile seasons-btns-mobile-Fix">
-      <a href="presetParts.html"> <button class="btn2-light">Predchádzajúci krok</button> </a>
-      <a href="contact.html"> <button class="btn2-light">Ďalší krok</button> </a>
+      <a href="kompletný-program.html"> <button class="btn2-light">Predchádzajúci krok</button> </a>
+      <a href="kontakt.html"> <button class="btn2-light">Ďalší krok</button> </a>
     </section>
     <section class="seasons-btns-desktop">
-      <a href="presetParts.html"> <button class="btn1-light">Späť na náhľad predvolieb</button> </a>
-      <a href="contact.html"> <button class="btn1-light">Pozrite si svoju konfiguráciu</button> </a>
+      <a href="kompletný-program.html"> <button class="btn1-light">Späť na náhľad predvolieb</button> </a>
+      <a href="kontakt.html"> <button class="btn1-light">Pozrite si svoju konfiguráciu</button> </a>
     </section>
     <div class="spacer1"></div>
     <footer class="footer-mobile">
