--- a/flower-availability.html
+++ b/flower-availability.html
@@ -42,10 +42,10 @@
     <header>
       <nav class="navbar">
         <ul class="nav-logotype">
-          <div>  <a href="index.html"><img src="img/logo.svg"   alt="logo" class="nav-logo"></a></div>
+          <div>  <a href="homepage.html"><img src="img/logo.svg"   alt="logo" class="nav-logo"></a></div>
           <div class="vl"></div>
           <li class="nav-item">
-            <a class="nav-link" href="index.html" class="nav-link"
+            <a class="nav-link" href="homepage.html" class="nav-link"
               >Flower studio</a
             >
           </li>
@@ -178,7 +178,8 @@
       </section>
     </section>
     <section class="seasons-btns-mobile seasons-btns-mobile-Fix">
-      <a href="presetParts.html">
+      <!--should add logics where was user before!!!-->
+      <a href="full-programme.html">
         <button class="btn2-light">Previous step</button>
       </a>
 
@@ -187,7 +188,7 @@
       </a>
     </section>
     <section class="seasons-btns-desktop">
-      <a href="presetParts.html">
+      <a href="full-programme.html">
         <button class="btn1-light">Back to preset preview</button>
       </a>
 
