--- a/homepage.html
+++ b/homepage.html
@@ -42,10 +42,10 @@
     <header>
         <nav class="navbar">
             <ul class="nav-logotype">
-                <div>  <a href="index.html"><img src="img/logo.svg"   alt="logo" class="nav-logo"></a></div>
+                <div>  <a href="homepage.html"><img src="img/logo.svg"   alt="logo" class="nav-logo"></a></div>
                 <div class="vl"></div>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
+                    <a class="nav-link" href="homepage.html" class="nav-link">Flower studio</a>
                 </li>
             </ul>
 
@@ -55,12 +55,13 @@
                 </li>
                 <div class="vl hiddenVl"></div>
                 <li class="nav-item-desk">
-                    <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
+                    <a class="nav-link" href="error-404.html" class="nav-link">Bouquetes</a>
                 </li>
                 <li class="nav-mobile">
-                    <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
+                    <a class="nav-link" href="error-404.html" class="nav-link">Bouquetes</a>
                 </li>
                 <a href="homepage.html" >English</a>
+                
                 <a href="domovská-stránka.html">Slovak</a>
             </ul>
 
@@ -574,17 +575,17 @@
     </div>
 
     <div class="footercontent">
-        <a href=""><p>Terms of use</p></a>
-        <a href=""><p>Cookies</p></a>
-        <a href=""><p>Privacy policy</p></a>
+        <a href="#"><p>Terms of use</p></a>
+        <a href="#"><p>Cookies</p></a>
+        <a href="#"><p>Privacy policy</p></a>
     </div>
 
 </footer>
 
 <section class="boringInfo">
-    <a class="headstyle2" href="">Privacy policy</a>
-    <a class="headstyle2" href="">Terms of use</a>
-    <a class="headstyle2" href="">Cookie policy</a>
+    <a class="headstyle2" href="#">Privacy policy</a>
+    <a class="headstyle2" href="#">Terms of use</a>
+    <a class="headstyle2" href="#">Cookie policy</a>
 </section>
 
 <script defer src="main.js"></script>
