--- a/kompletný-program.html
+++ b/kompletný-program.html
@@ -43,16 +43,16 @@
       <nav class="navbar">
         <ul class="nav-logotype">
           <div>
-            <a href="index.html"><img alt="logo" class="nav-logo" src="img/logo.svg" /></a>
+            <a href="domovská-stránka.html"><img alt="logo" class="nav-logo" src="img/logo.svg" /></a>
           </div>
           <div class="vl"></div>
-          <li class="nav-item"><a class="nav-link" href="index.html">Kvetinové štúdio</a></li>
+          <li class="nav-item"><a class="nav-link" href="domovská-stránka.html">Kvetinové štúdio</a></li>
         </ul>
         <ul class="nav-menu">
-          <li class="nav-item-desk"><a class="nav-link" href="style-your-wedding.html">Svadobné plány</a></li>
+          <li class="nav-item-desk"><a class="nav-link" href="štýl-vašej-svadby.html">Svadobné plány</a></li>
           <div class="vl hiddenVl"></div>
-          <li class="nav-item-desk"><a class="nav-link" href="404.html">Bouquetes</a></li>
-          <li class="nav-mobile"><a class="nav-link" href="404.html">Bouquetes</a></li>
+          <li class="nav-item-desk"><a class="nav-link" href="error-404.html">Bouquetes</a></li>
+          <li class="nav-mobile"><a class="nav-link" href="error-404.html">Bouquetes</a></li>
           <a href="full-programme.html">English</a>
           <a href="kompletný-program.html">Slovak</a>
         </ul>
@@ -165,8 +165,8 @@
       <img alt="Dekorácie pre družičky" class="presetPictureDesktop" src="img/otherdecorations3.webp" />
     </section>
     <section class="navigationButtonsDesktop">
-      <a href="style-your-wedding.html"> <button class="btn1-light">Späť na predvoľby dekorácií</button> </a>
-      <a href="flower-availability.html"> <button class="btn1-light">Pozrite si, aké kvety sú k dispozícii</button> </a>
+      <a href="štýl-vašej-svadby.html"> <button class="btn1-light">Späť na predvoľby dekorácií</button> </a>
+      <a href="dostupnosť-kvetov.html"> <button class="btn1-light">Pozrite si, aké kvety sú k dispozícii</button> </a>
     </section>
     <div class="carousel fadePreview"></div>
     <!--Other decorations desktop pictures--><!-- MObile Version start MANGE TAK for carousel goes to https://www.youtube.com/watch?v=KtsVC_JRxCU&ab_channel=codefoxx--><!--Bridesmaids decorations desktop pictures--><!--Car decorations desktop pictures--><!--Church decorations desktop pictures--><!-- part1--><!--Wedding hall decorations desktop pictures--><!--Feather for wedding guest desktop pictures--><!-- part2--><!-- Swiper --><!--bouquete for bride desktop pictures--><!--part3--><!-- copy from here end--><!-- copy from here start-->
@@ -384,8 +384,8 @@
       <div class="slider-cell slider" id="slid7" onclick="currentPresetSlideMob(7)"></div>
     </section>
     <section class="navigationButtonsMobile">
-      <button class="btn1-light"><a href="style-your-wedding.html">Predchádzajúci krok</a></button>
-      <button class="btn1-light"><a href="flower-availability.html">Ďalší krok</a></button>
+      <button class="btn1-light"><a href="štýl-vašej-svadby.html">Predchádzajúci krok</a></button>
+      <button class="btn1-light"><a href="dostupnosť-kvetov.html">Ďalší krok</a></button>
     </section>
     <!--Footer mobile-->
     <footer class="footer-mobile">
@@ -448,14 +448,14 @@
         ></a>
       </div>
       <div class="footercontent">
-        <a href="404.html"><p>Podmienky používania</p></a><a href="404.html"><p>Cookies</p></a
-        ><a href="404.html"><p>Zásady ochrany osobných údajov</p></a>
+        <a href="#"><p>Podmienky používania</p></a><a href="#"><p>Cookies</p></a
+        ><a href="#"><p>Zásady ochrany osobných údajov</p></a>
       </div>
     </footer>
     <!-- Footer desktop-->
     <section class="boringInfo">
-      <a href="404.html">Zásady ochrany osobných údajov</a> <a href="404.html">Podmienky používania</a>
-      <a href="404.html">Zásady používania súborov cookie</a>
+      <a href="#">Zásady ochrany osobných údajov</a> <a href="#">Podmienky používania</a>
+      <a href="#">Zásady používania súborov cookie</a>
     </section>
     <script defer src="main.js"></script>
     <script defer src="presetPreview.js"></script>
