--- a/partial-programme.html
+++ b/partial-programme.html
@@ -44,11 +44,11 @@
       <nav class="navbar">
         <ul class="nav-logotype">
           <div>
-            <a href="index.html"><img src="img/logo.svg" alt="logo" class="nav-logo" /></a>
+            <a href="homepage.html"><img src="img/logo.svg" alt="logo" class="nav-logo" /></a>
           </div>
           <div class="vl"></div>
           <li class="nav-item">
-            <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
+            <a class="nav-link" href="homepage.html" class="nav-link">Flower studio</a>
           </li>
         </ul>
 
@@ -58,10 +58,10 @@
           </li>
           <div class="vl hiddenVl"></div>
           <li class="nav-item-desk">
-            <a class="nav-link" href="404.html" class="nav-link">Bouquetes</a>
+            <a class="nav-link" href="error-404.html" class="nav-link">Bouquetes</a>
           </li>
           <li class="nav-mobile">
-            <a class="nav-link" href="404.html" class="nav-link">Bouquetes</a>
+            <a class="nav-link" href="error-404.html" class="nav-link">Bouquetes</a>
           </li>
           <a href="partial-programme.html">English</a>
           <a href="ciastkový-program.html">Slovak</a>
@@ -463,16 +463,16 @@
       </div>
 
       <div class="footercontent">
-        <a href="404.html"><p>Terms of use</p></a>
-        <a href="404.html"><p>Cookies</p></a>
-        <a href="404.html"><p>Privacy policy</p></a>
+        <a href="#"><p>Terms of use</p></a>
+        <a href="#"><p>Cookies</p></a>
+        <a href="#"><p>Privacy policy</p></a>
       </div>
     </footer>
 
     <section class="boringInfo">
-      <a href="404.html">Privacy policy</a>
-      <a href="404.html">Terms of use</a>
-      <a href="404.html">Cookie policy</a>
+      <a href="#">Privacy policy</a>
+      <a href="#">Terms of use</a>
+      <a href="#">Cookie policy</a>
     </section>
 
     <script defer src="main.js"></script>
