--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -34,10 +34,10 @@
     <header>
         <nav class="navbar">
             <ul class="nav-logotype">
-              <div>  <a href="index.html"><img src="img/logo.svg"   alt="logo" class="nav-logo"></a></div>
+              <div>  <a href="homepage.html"><img src="img/logo.svg"   alt="logo" class="nav-logo"></a></div>
                 <div class="vl"></div>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
+                    <a class="nav-link" href="homepage.html" class="nav-link">Flower studio</a>
                 </li>
             </ul>
             <ul class="nav-menu">  
@@ -48,14 +48,14 @@
                 <div class="vl hiddenVl"></div>
 
                 <li class="nav-item-desk">
-                    <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
+                    <a class="nav-link" href="error-404.html" class="nav-link">Bouquetes</a>
                 </li>
 
                 <li class="nav-mobile">
-                    <a class="nav-link"href="404.hmtl" class="nav-link">Bouquetes</a>
+                    <a class="nav-link" href="error-404.html" class="nav-link">Bouquetes</a>
                 </li>
                 <a href="style-your-wedding.html" >English</a>
-                <a href="štýl-vašej-svadby.html">Slovak</a=>
+                <a href="štýl-vašej-svadby.html">Slovak</a>
             </ul>
         </nav>
 
@@ -110,7 +110,7 @@
         <div class="programs-container">
 
             <div class="prog-it-cont">
-                <a href="presetParts.html" onclick="storeClickedProgram('program1')">
+                <a href="full-programme.html" onclick="storeClickedProgram('program1')">
                 <div class="prog-img">
                     <img src="img/program3.webp" alt="plus icon" class="whitePlus">
                         <div class="middle">
@@ -138,7 +138,7 @@
             </div>
 
             <div class="prog-it-cont">
-                <a href="partialProgramme.html" onclick="storeClickedProgram('program2')">
+                <a href="partial-programme.html" onclick="storeClickedProgram('program2')">
                 <div class="prog-img">
                     <img src="img/program2.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
@@ -160,7 +160,7 @@
             </div>
 
             <div class="prog-it-cont">
-                <a href="baseProgramme.html" onclick="storeClickedProgram('program3')">
+                <a href="base-programme.html" onclick="storeClickedProgram('program3')">
                 <div class="prog-img">
                     <img src="img/program1.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
@@ -205,7 +205,7 @@
                 <p class="text-cont2">In this preset you can find everything we are providing</p>
                 <p class="text-cont2">Starts from - 1500&#8364</p>
                 <div class="centerButtonFix">
-                   <a href="presetParts.html"> <button class="btn1-light" id="prog-mobile-btn">Choose this program</button></a>
+                   <a href="full-programme.html"> <button class="btn1-light" id="prog-mobile-btn">Choose this program</button></a>
                 </div>
             </div>
 
@@ -226,7 +226,7 @@
                 <p class="text-cont2">This preset most of our products that are favorite among customers</p>
                 <p class="text-cont2">Price from - 1000&#8364</p>
                 <div class="centerButtonFix">
-                    <a href="partialProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">Choose this program</button></a>
+                    <a href="partial-programme.html"> <button class="btn1-light" id="prog-mobile-btn">Choose this program</button></a>
                 </div>
             </div>
 
@@ -247,7 +247,7 @@
                 <p class="text-cont2">In our base preset you will find most common parts</p>
                 <p class="text-cont2">Price from - 700&#8364</p>
                 <div  class="centerButtonFix">
-                    <a href="baseProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">Choose this program</button></a>
+                    <a href="base-programme.html"> <button class="btn1-light" id="prog-mobile-btn">Choose this program</button></a>
                 </div>
             </div>
 
@@ -367,17 +367,17 @@
     </div>
 
     <div class="footercontent">
-        <a href="404.html"><p>Terms of use</p></a>
-        <a href="404.html"><p>Cookies</p></a>
-        <a href="404.html"><p>Privacy policy</p></a>
+        <a href="#"><p>Terms of use</p></a>
+        <a href="#"><p>Cookies</p></a>
+        <a href="#"><p>Privacy policy</p></a>
     </div>
 
 </footer>
 
     <section class="boringInfo">
-        <a href="404.html">Privacy policy</a>
-        <a href="404.html">Terms of use</a>
-        <a href="404.html">Cookie policy</a>
+        <a href="#">Privacy policy</a>
+        <a href="#">Terms of use</a>
+        <a href="#">Cookie policy</a>
     </section>
 
     
