fixed wheel, deleted random styles, tracking choosen programme and month

--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -110,7 +110,7 @@
         <div class="programs-container">
 
             <div class="prog-it-cont">
-                <a href="full-programme.html" onclick="storeClickedProgram('program1')">
+                <a href="full-programme.html" onclick="storeClickedProgram('full-programme')">
                 <div class="prog-img">
                     <img src="img/program3.webp" alt="plus icon" class="whitePlus">
                         <div class="middle">
@@ -138,7 +138,7 @@
             </div>
 
             <div class="prog-it-cont">
-                <a href="partial-programme.html" onclick="storeClickedProgram('program2')">
+                <a href="partial-programme.html" onclick="storeClickedProgram('partial-programme')">
                 <div class="prog-img">
                     <img src="img/program2.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
@@ -160,7 +160,7 @@
             </div>
 
             <div class="prog-it-cont">
-                <a href="base-programme.html" onclick="storeClickedProgram('program3')">
+                <a href="base-programme.html" onclick="storeClickedProgram('base-programme')">
                 <div class="prog-img">
                     <img src="img/program1.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
