--- a/štýl-vašej-svadby.html
+++ b/štýl-vašej-svadby.html
@@ -97,7 +97,7 @@
       </div>
       <div class="programs-container">
         <div class="prog-it-cont">
-          <a href="kompletný-program.html" onclick="storeClickedProgram('program1')">
+          <a href="kompletný-program.html" onclick="storeClickedProgram('full-programme')">
             <div class="prog-img">
               <img alt="ikona plus" class="whitePlus" src="img/program3.webp" />
               <div class="middle">
@@ -139,7 +139,7 @@
           >
         </div>
         <div class="prog-it-cont">
-          <a href="ciastkový-program.html" onclick="storeClickedProgram('program2')">
+          <a href="ciastkový-program.html" onclick="storeClickedProgram('partial-programme')">
             <div class="prog-img">
               <img alt="Ikona PLus" class="whitePlus" src="img/program2.webp" />
               <div class="middle">
@@ -178,7 +178,7 @@
           >
         </div>
         <div class="prog-it-cont">
-          <a href="základný-program.html" onclick="storeClickedProgram('program3')">
+          <a href="základný-program.html" onclick="storeClickedProgram('base-programme')">
             <div class="prog-img">
               <img alt="Ikona PLus" class="whitePlus" src="img/program1.webp" />
               <div class="middle">
