added flowers, contact text logics partially on both languages

--- a/chyba-404.html
+++ b/chyba-404.html
@@ -43,10 +43,10 @@
    <nav class="navbar"> 
     <ul class="nav-logotype"> 
      <div>
-      <a href="index.html"><img alt="logo" class="nav-logo" src="img/logo.svg"></a>
+      <a href="domovská-stránka.html"><img alt="logo" class="nav-logo" src="img/logo.svg"></a>
      </div> 
      <div class="vl"></div> 
-     <li class="nav-item"><a class="nav-link" href="index.html">Kvetinové štúdio</a></li> 
+     <li class="nav-item"><a class="nav-link" href="domovská-stránka.html">Kvetinové štúdio</a></li> 
     </ul> 
     <ul class="nav-menu"> 
      <li class="nav-item-desk"><a class="nav-link" href="style-your-wedding.html">Svadobné plány</a></li> 
