--- a/flower-availability.html
+++ b/flower-availability.html
@@ -202,17 +202,17 @@
       </section>
       <section class="flowers-container">
         <div class="flower-frame" id="english-rose">
-          <img src="img/flowers/spring1.webp" alt="flowers" class="flower" id="flower1" />
+          <img src="img/flowers/aprilwebp/Lilac.webp" alt="flowers" class="flower" id="flower1" />
           <p class="flower-name" id="flowerName1">Lisianthus</p>
         </div>
 
         <div class="flower-frame" id="">
-          <img src="img/flowers/spring2a.webp" alt="flowers" class="flower" id="flower2" />
+          <img src="img/flowers/aprilcompressedwebp/Lilac.webp" alt="flowers" class="flower" id="flower2" />
           <p class="flower-name" id="flowerName2">White Rose</p>
         </div>
 
         <div class="flower-frame" id="">
-          <img src="img/flowers/spring3.webp" alt="flowers" class="flower" id="flower3" />
+          <img src="img/flowers/april/Lilac.jpg" alt="flowers" class="flower" id="flower3" />
           <p class="flower-name" id="flowerName3">English rose</p>
         </div>
       </section>
