--- a/kontakt.html
+++ b/kontakt.html
@@ -14,7 +14,7 @@
     <link href="img/favicon.webp" rel="shortcut icon" type="image/jpg" />
     <title>Kvety Čemerica</title>
   </head>
-  <body>
+  <body onload="getUserChoise();fillContactPageSL();">
     <style>
       a:link {
         text-decoration: none;
@@ -42,10 +42,10 @@
       <nav class="navbar">
         <ul class="nav-logotype">
           <div>
-            <a href="index.html"><img alt="logo" class="nav-logo" src="img/logo.svg" /></a>
+            <a href="domovská-stránka.html"><img alt="logo" class="nav-logo" src="img/logo.svg" /></a>
           </div>
           <div class="vl"></div>
-          <li class="nav-item"><a class="nav-link" href="index.html">Kvetinové štúdio</a></li>
+          <li class="nav-item"><a class="nav-link" href="domovská-stránka.html">Kvetinové štúdio</a></li>
         </ul>
         <ul class="nav-menu">
           <li class="nav-item-desk"><a class="nav-link" href="style-your-wedding.html">Svadobné plány</a></li>
@@ -94,13 +94,7 @@
     <!-- featured END--><!-- contact desktop grid-->
     <section class="contactDesktopGrid">
       <section>
-        <p>Kytica pre nevestu</p>
-        <p>Pierka pre svadobných hostí</p>
-        <p>Výzdoba svadobnej sály</p>
-        <p>Výzdoba kostola</p>
-        <p>Dekorácie auta</p>
-        <p>Dekorácie pre družičky</p>
-        <p>Ostatné dekorácie</p>
+        <p id="contactChosenPresetSL">12312</p>
         <section>
           <a href="flower-availability.html">
             <button class="btn1-light buttonWidthFix">Späť na stránku dostupnosti kvetov</button>
@@ -134,6 +128,7 @@
     <div class="carousel fadePreview"></div>
     <section class="yourConfigurationSection">
       <h1 class="underlineLong">Vaša konfigurácia</h1>
+      <p class="contactChosenPresetSL"></p>
       <br />
       <h2 class="underline">Vybraná predvoľba</h2>
       <p class="chosenText">Kompletný program</p>
