--- a/error-404.html
+++ b/error-404.html
@@ -47,11 +47,11 @@
       <nav class="navbar">
         <ul class="nav-logotype">
           <div>
-            <a href="index.html"><img src="img/logo.svg" alt="logo" class="nav-logo" /></a>
+            <a href="domovská-stránka.html"><img src="img/logo.svg" alt="logo" class="nav-logo" /></a>
           </div>
           <div class="vl"></div>
           <li class="nav-item">
-            <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
+            <a class="nav-link" href="domovská-stránka.html" class="nav-link">Flower studio</a>
           </li>
         </ul>
 
