--- a/kompletný-program.html
+++ b/kompletný-program.html
@@ -51,8 +51,8 @@
         <ul class="nav-menu">
           <li class="nav-item-desk"><a class="nav-link" href="štýl-vašej-svadby.html">Svadobné plány</a></li>
           <div class="vl hiddenVl"></div>
-          <li class="nav-item-desk"><a class="nav-link" href="error-404.html">Bouquetes</a></li>
-          <li class="nav-mobile"><a class="nav-link" href="error-404.html">Bouquetes</a></li>
+          <li class="nav-item-desk"><a class="nav-link" href="chyba-404.html">Bouquetes</a></li>
+          <li class="nav-mobile"><a class="nav-link" href="chyba-404.html">Bouquetes</a></li>
           <a href="full-programme.html">English</a>
           <a href="kompletný-program.html">Slovak</a>
         </ul>
