--- a/domovská-stránka.html
+++ b/domovská-stránka.html
@@ -61,8 +61,8 @@
         <ul class="nav-menu">
           <li class="nav-item-desk"><a class="nav-link" href="štýl-vašej-svadby.html">Svadobné plány</a></li>
           <div class="vl hiddenVl"></div>
-          <li class="nav-item-desk"><a class="nav-link" href="404.html">Bouquetes</a></li>
-          <li class="nav-mobile"><a class="nav-link" href="404.html">Bouquetes</a></li>
+          <li class="nav-item-desk"><a class="nav-link" href="chyba-404.html">Bouquetes</a></li>
+          <li class="nav-mobile"><a class="nav-link" href="chyba-404.html">Bouquetes</a></li>
           <a href="homepage.html">English</a>
           <a href="domovská-stránka.html">Slovak</a>
         </ul>
