--- a/základný-program.html
+++ b/základný-program.html
@@ -52,8 +52,8 @@
         <ul class="nav-menu">
           <li class="nav-item-desk"><a class="nav-link" href="style-your-wedding.html">Svadobné plány</a></li>
           <div class="vl hiddenVl"></div>
-          <li class="nav-item-desk"><a class="nav-link" href="error-404.html">Bouquetes</a></li>
-          <li class="nav-mobile"><a class="nav-link" href="error-404.html">Bouquetes</a></li>
+          <li class="nav-item-desk"><a class="nav-link" href="chyba-404.html">Bouquetes</a></li>
+          <li class="nav-mobile"><a class="nav-link" href="chyba-404.html">Bouquetes</a></li>
           <a href="base-programme.html">English</a>
           <a href="základný-program.html">Slovak</a>
         </ul>
