dynamic fill of text, function optimisation, improved desktop version

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp" />
     <title>Kvety Cemerica</title>
   </head>
-  <body onload="getUserChoise();fillContactPresetOptions('en');fillContactFlowers();displayChosenMonthMobile('en')">
+  <body onload="getUserChoise();fillContactPresetOptions('en');displayChosenMonthMobile('en')">
     <style>
       a:link {
         text-decoration: none;
