overhaul of structure and styling to more compact

--- a/domovská-stránka.html
+++ b/domovská-stránka.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="sk">
   <head>
     <!--display-->
     <meta charset="UTF-8" />
@@ -349,13 +349,13 @@
           <section>
             <a href="https://www.farmaburina.sk/"
               ><img class="mindsetImgThird" loading="lazy" src="./img/farm2.webp" width="400px" />
-              <p class="flowerNBakeryFix underlineDLong">Kvetinová farma Burina</p></a
+              <p class="flowerNBakeryFix underlineDLongNoMargins">Kvetinová farma Burina</p></a
             >
           </section>
           <section>
             <a href="https://instagram.com/lauri.torticky?igshid=YmMyMTA2M2Y="
               ><img class="mindsetImgThird" loading="lazy" src="./img/bakery.webp" width="400px" />
-              <p class="flowerNBakeryFix underlineDLong">Pekáreň Laura &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p></a
+              <p class="flowerNBakeryFix underlineDLong underlineDLongNoMargins">Pekáreň Laura </p></a
             >
           </section>
         </div>
