--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
     <!--display-->
     <meta charset="UTF-8">
@@ -55,18 +55,17 @@
                 </li>
                 <div class="vl hiddenVl"></div>
                 <li class="nav-item-desk">
-                    <a class="nav-link" href="error-404.html" class="nav-link">Bouquetes</a>
+                    <a class="nav-link" href="contact.html" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-mobile">
-                    <a class="nav-link" href="error-404.html" class="nav-link">Bouquetes</a>
+                    <a class="nav-link" href="contact.html" class="nav-link">Contact</a>
                 </li>
                 <a href="homepage.html" >English</a>
                 
                 <a href="domovská-stránka.html">Slovak</a>
             </ul>
 
-        </nav>
-        <hr size="2" height="10px" color="black">
+        </nav>    
     </header>
 <!-- navigation bar END -->
 <!-- featured-->
@@ -374,11 +373,11 @@
         </section>
         <section>
             <img loading="lazy" class="mindsetImgThird" width="400px" src="./img/farm2.webp"></img>
-            <a href="https://www.farmaburina.sk/"><p  class="flowerNBakeryFix underlineDLong">Flower farm Burina</p></a>
+            <a href="https://www.farmaburina.sk/"><p  class="flowerNBakeryFix underlineDLongNoMargins">Flower farm Burina</p></a>
         </section>
         <section>
         <img loading="lazy" class="mindsetImgThird" width="400px" src="./img/bakery.webp"></img>
-        <a href="https://instagram.com/lauri.torticky?igshid=YmMyMTA2M2Y="><p  class="flowerNBakeryFix underlineDLong">Laura's Bakery &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</p></a>
+        <a href="https://instagram.com/lauri.torticky?igshid=YmMyMTA2M2Y="><p  class="flowerNBakeryFix underlineDLongNoMargins">Laura's Bakery &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</p></a>
     </section>
     </div>
         
