--- a/štýl-vašej-svadby.html
+++ b/štýl-vašej-svadby.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="sk">
   <head>
     <!--display-->
     <meta charset="UTF-8" />
@@ -39,7 +39,7 @@
     </style>
   </head>
   <body
-    onload="showCurrentMonthFlowers();currentSlide(1);currentDiv(1); currentPresetSlide(1); currentPresetSlideMob(1);;getUserChoise();fillContactPresetOptions('sl');displayChosenMonthMobile('sl')"
+    onload="showCurrentMonthFlowers();currentSlide(1);currentDiv(1); currentPresetSlide(1); currentPresetSlideMob(1);;getUserChoise();fillContactPresetOptions('sl');"
   >
     <!-- navigation bar-->
     <header>
@@ -351,10 +351,6 @@
       <img alt="Dekorácie pre družičky" class="presetPictureDesktop" src="img/otherdecorations2.webp" />
       <img alt="Dekorácie pre družičky" class="presetPictureDesktop" src="img/otherdecorations3.webp" />
     </section>
-    <section class="navigationButtonsDesktop">
-      <a href="štýl-vašej-svadby.html"> <button class="btn1-light">Späť na predvoľby dekorácií</button> </a>
-      <a href="dostupnosť-kvetov.html"> <button class="btn1-light">Pozrite si, aké kvety sú k dispozícii</button> </a>
-    </section>
     <!--Other decorations desktop pictures--><!-- MObile Version start MANGE TAK for carousel goes to https://www.youtube.com/watch?v=KtsVC_JRxCU&ab_channel=codefoxx--><!--Bridesmaids decorations desktop pictures--><!--Car decorations desktop pictures--><!--Church decorations desktop pictures--><!-- part1--><!--Wedding hall decorations desktop pictures--><!--Feather for wedding guest desktop pictures--><!-- part2--><!-- Swiper --><!--bouquete for bride desktop pictures--><!--part3--><!-- copy from here end--><!-- copy from here start-->
     <!--part4-->
     <section class="presetPartsTextMobile">
@@ -558,10 +554,6 @@
       <div class="slider-cell slider" id="slid6" onclick="currentPresetSlideMob(6)"></div>
       <div class="slider-cell slider" id="slid7" onclick="currentPresetSlideMob(7)"></div>
     </section>
-    <section class="navigationButtonsMobile">
-      <button class="btn1-light"><a href="štýl-vašej-svadby.html">Predchádzajúci krok</a></button>
-      <button class="btn1-light"><a href="dostupnosť-kvetov.html">Ďalší krok</a></button>
-    </section>
     <!--dostupnosty kvetof / availability-->
     <section class="season-title">
       <p class="headstyle1 underlineD">Sezónne koleso</p>
@@ -569,7 +561,7 @@
     <!-- Season explanation END-->
     <section id="season-desktop-frame">
       <section class="season-wheel">
-        <div class="wheel-section">
+        <div class="wheel-section" onclick="displayChosenMonthMobile('sl')">
           <div class="wheel-frame">
             <img alt="šípka" id="arrow" src="img/arrow.webp" />
             <div id="link-grid">
@@ -653,14 +645,6 @@
       </section>
     </section>
     <!-- season wheel --><!-- MObile Version start/ carousel -->
-    <section class="seasons-btns-mobile seasons-btns-mobile-Fix">
-      <a href="kompletný-program.html"> <button class="btn2-light">Predchádzajúci krok</button> </a>
-      <a href="kontakt.html"> <button class="btn2-light">Ďalší krok</button> </a>
-    </section>
-    <section class="seasons-btns-desktop">
-      <a href="kompletný-program.html"> <button class="btn1-light">Späť na náhľad predvolieb</button> </a>
-      <a href="kontakt.html"> <button class="btn1-light">Pozrite si svoju konfiguráciu</button> </a>
-    </section>
     <!--kontakt start-->
     <h6 class="underlineDLong configurationHeadingFix">Vaša konfigurácia</h6>
     <section class="contactDesktopHeadingsGrid">
@@ -672,11 +656,6 @@
     <section class="contactDesktopGrid">
       <section>
         <p class="contactChosenPreset"></p>
-        <section>
-          <a href="flower-availability.html">
-            <button class="btn1-light buttonWidthFix">Späť na stránku dostupnosti kvetov</button>
-          </a>
-        </section>
       </section>
       <section class="availableFlowersSlide">
         <img alt="Kvety" class="availableFlowers" src="img/flowers/spring3.webp" />
@@ -729,9 +708,6 @@
             <button class="btn1-light contactButton" type="submit">Kontakt</button>
           </form>
         </section>
-      </section>
-      <section class="navigationButtonsMobileContact">
-        <button class="btn1-light"><a href="flower-availability.html">Predchádzajúci krok</a></button>
       </section>
     </section>
     <footer class="footer-mobile">
