added buttons under 7 producs, no more hover text, deleted featured container and spacers

--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -33,7 +33,7 @@
    
     }
 </style>
-<body onload="showCurrentMonthFlowers();currentSlide(1);currentDiv(1); currentPresetSlide(1); currentPresetSlideMob(1);getUserChoise();currentDiv(1); currentPresetSlide(1); currentPresetSlideMob(1);">
+<body onload="showCurrentMonthFlowers();currentSlide(1);currentDiv(1); currentPresetSlide(1); currentPresetSlideMob(1);getUserChoise();currentDiv(1); currentPresetSlide(1);">
     <!-- navigation bar-->
     <header>
         <nav class="navbar">
@@ -69,22 +69,9 @@
     
 
  <!-- featured-->
- <section id="featured-container">
+ <section>
 
-  <div id="featured">
-      <div class="featured-text">
-          <p class="featured-inspired">Get inspired</p>
-              <hr width="90%">
-          <p id="inspiration">Welcome to our atelier</p>    
-          <p class="inspired"> Plan the wedding of your dreams with us! As a dedicated company, we provide wedding flowers and decorations of all kinds and for all tastes. </p>     
-          <button class="button-main" id="downButton" >See our products</button>
-      </div>
-      <div class="videoframe">
-          <video autoplay muted loop id="video-cemerica">
-              <source src="video/video-cemerica.mp4" type="video/mp4">
-          </video>
-      </div>
-  </div>
+  
 
   <div id="featured-mobile">
       <video autoplay muted loop id="video-cemerica-mobile">
@@ -109,8 +96,8 @@
             <section class="featured-text">
               <p class="featured-inspired">Discover</p>
               <hr width="90%" />
-              <p id="inspiration">Our preset configurator</p>
-              <p class="inspired">Welcome to our unique wedding configurator where you can choose from many options we are providing so your very special day will be exactly as you wish to be
+              <p id="inspiration">Welcome to our atelier</p>
+              <p class="inspired">Plan the wedding of your dreams with us! As a dedicated company, we provide wedding flowers and decorations of all kinds and for all tastes.
               </p>
               <button class="button-main" id="downButton">Show more</button>
             </section>
@@ -194,8 +181,6 @@
             </div>
         </div>
 </section>
-<div class="spacer1"></div>
-<div class="spacer2"></div>
 <!-- promgrammes Desktop END-->
 
 <section id="programs-mobile">
@@ -562,6 +547,15 @@
     <!--Other decorations desktop pictures-->
     <img class="presetPictureDesktop" src="img/otherdecorations2.webp" alt="Bridesmaids decoration" />
     <img class="presetPictureDesktop" src="img/otherdecorations3.webp" alt="Bridesmaids decoration" />
+  </section>
+  <section class="productsSelectButtons">
+    <div class="slider-cell slider" id="slid11" onclick="currentPresetSlide(1)"></div>
+    <div class="slider-cell slider" id="slid21" onclick="currentPresetSlide(2)"></div>
+    <div class="slider-cell slider" id="slid31" onclick="currentPresetSlide(3)"></div>
+    <div class="slider-cell slider" id="slid41" onclick="currentPresetSlide(4)"></div>
+    <div class="slider-cell slider" id="slid51" onclick="currentPresetSlide(5)"></div>
+    <div class="slider-cell slider" id="slid61" onclick="currentPresetSlide(6)"></div>
+    <div class="slider-cell slider" id="slid71" onclick="currentPresetSlide(7)"></div>
   </section>
   <!-- Flower wheel start-->
   <section class="season-title">
