updated semantics, position adjustments

--- a/contact.html
+++ b/contact.html
@@ -70,11 +70,10 @@
     <!--DESKTOP VERSION-->
     <!-- featured END-->
       <!--YOUR CONFIGURATION CONTENT-->
-        <h1 class="underline">Contact form</h1>
-        <section class="contactMobile">
-          
-
-            
+      <div class="contactHeadingPos">
+        <h1 class="headstyle1 underlineDLong"  >Contact form</h1>
+      </div>
+        <section class="contactMobile" >
             <p class="contactText">
               By contacting us, we will receive your customisation and then we will be able to give you a price estimate
             </p>
