fixed product carousel

--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -18,7 +18,7 @@
     <title>Kvety Cemerica</title>
     
 </head>
-<body onload="showCurrentMonthFlowers(); currentPresetSlideMob(1);currentSlide(1);currentDiv(1); currentPresetSlide(1);getUserChoise();currentDiv(1);">
+<body onload="currentPresetSlideMob(1);showCurrentMonthFlowers();currentSlide(1);currentDiv(1); currentPresetSlide(1);getUserChoise();currentDiv(1);">
     <!-- navigation bar-->
     <header>
         <nav class="navbar">
@@ -768,13 +768,13 @@
     </section>
   </section>
   <section class="sliderButtons">
-    <div class="slider-cell slider" id="slid1" onclick="currentPresetSlideMob(1)"></div>
-    <div class="slider-cell slider" id="slid2" onclick="currentPresetSlideMob(2)"></div>
-    <div class="slider-cell slider" id="slid3" onclick="currentPresetSlideMob(3)"></div>
-    <div class="slider-cell slider" id="slid4" onclick="currentPresetSlideMob(4)"></div>
-    <div class="slider-cell slider" id="slid5" onclick="currentPresetSlideMob(5)"></div>
-    <div class="slider-cell slider" id="slid6" onclick="currentPresetSlideMob(6)"></div>
-    <div class="slider-cell slider" id="slid7" onclick="currentPresetSlideMob(7)"></div>
+    <div class="productSliderCellMobile" id="slid1" onclick="currentPresetSlideMob(1)"></div>
+    <div class="productSliderCellMobile" id="slid2" onclick="currentPresetSlideMob(2)"></div>
+    <div class="productSliderCellMobile" id="slid3" onclick="currentPresetSlideMob(3)"></div>
+    <div class="productSliderCellMobile" id="slid4" onclick="currentPresetSlideMob(4)"></div>
+    <div class="productSliderCellMobile" id="slid5" onclick="currentPresetSlideMob(5)"></div>
+    <div class="productSliderCellMobile" id="slid6" onclick="currentPresetSlideMob(6)"></div>
+    <div class="productSliderCellMobile" id="slid7" onclick="currentPresetSlideMob(7)"></div>
   </section>
   <section class="gridPresetPreviewDesktop" id="presetParts">
     <section class="presetOptions">
